test/cases/parser/ArrayDim3.errors
src/ArrayDim3.b:6:16: Syntax error (invalid array specification)
