test/cases/parser/ArrayDim3.b
// mixture of fixed and variable sized array dimensions

module ArrayDim

interface {
    type foo = i32[1,,2];
}
